--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "http-errors": "~1.7.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.2.9",
+    "redis": "~0.11.0",
     "socket.io": "^2.1.1"
   }
 }
